--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Production build
+# Production builds
 build/
 dist/
 
@@ -20,6 +20,7 @@ dist/
 .idea/
 *.swp
 *.swo
+*~
 
 # OS generated files
 .DS_Store
@@ -61,38 +62,7 @@ jspm_packages/
 # Yarn Integrity file
 .yarn-integrity
 
-# dotenv environment variables file
-.env
-
-# parcel-bundler cache (https://parceljs.org/)
-.cache
-.parcel-cache
-
-# next.js build output
-.next
-
-# nuxt.js build output
-.nuxt
-
-# vuepress build output
-.vuepress/dist
-
-# Serverless directories
-.serverless
-
-# FuseBox cache
-.fusebox/
-
-# DynamoDB Local files
-.dynamodb/
-
-# TernJS port file
-.tern-port
-
-# Stores VSCode versions used for testing VSCode extensions
-.vscode-test
-
-# .NET
+# .NET Core
 bin/
 obj/
 *.user
@@ -103,14 +73,11 @@ obj/
 *.pdb
 *.log
 
-# Visual Studio
-.vs/
-*.sln.docstates
+# Entity Framework
+Migrations/*.Designer.cs
 
 # User-specific files
 *.rsuser
-*.userosscache
-*.sln.docstates
 
 # Build results
 [Dd]ebug/
@@ -130,9 +97,6 @@ bld/
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
-
-# Uncomment if you have tasks that create the project's static files in wwwroot
-#wwwroot/
 
 # Visual Studio 2017 auto generated files
 Generated\ Files/
@@ -282,22 +246,8 @@ publish/
 
 # Microsoft Azure Web App publish settings. Comment the next line if you want to
 # checkin your Azure Web App publish settings, but sensitive information contained
-# in these files will be unencrypted
-PublishScripts/
-
-# NuGet Packages
-*.nupkg
-# NuGet Symbol Packages
-*.snupkg
-# The packages folder can be ignored because of Package Restore
-**/[Pp]ackages/*
-# except build/, which is used as an MSBuild target.
-!**/[Pp]ackages/build/
-# Uncomment if necessary however generally it will be regenerated when needed
-#!**/[Pp]ackages/repositories.config
-# NuGet v3's project.json files produces more ignorable files
-*.nuget.props
-*.nuget.targets
+# in these files may be visible to others.
+*.azurePubxml
 
 # Microsoft Azure Build Output
 csx/
@@ -351,8 +301,7 @@ _UpgradeReport_Files/
 Backup*/
 UpgradeLog*.XML
 UpgradeLog*.htm
-ServiceFabricBackup/
-*.rptproj.bak
+CConversionReportFiles/
 
 # SQL Server files
 *.mdf
@@ -475,3 +424,35 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+
+# Database files
+*.db
+*.sqlite
+*.sqlite3
+
+# Uploaded files (signatures, evidence, etc.)
+wwwroot/signatures/
+wwwroot/uploads/
+wwwroot/evidence/
+
+# Temporary files
+temp/
+tmp/
+
+# Backup files
+*.bak
+*.backup
+
+# Configuration files with sensitive data
+appsettings.Production.json
+appsettings.Staging.json
+
+# SSL certificates
+*.pfx
+*.p12
+*.key
+*.crt
+*.cer
+
+# Local development files
+*.local
