--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "@ant-design/icons": "^6.0.0",
     "@fontsource/inter": "^5.2.6",
     "@headlessui/react": "^2.2.7",
+    "@microsoft/signalr": "^9.0.6",
     "@tanstack/react-table": "^8.21.3",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "antd": "^5.26.7",
+    "antd": "^5.27.0",
     "axios": "^1.11.0",
     "lucide-react": "^0.536.0",
     "react": "^19.1.1",
