docs: actualiza README y documentación técnica; agrega docs/SECURITY.md, docs/STORAGE.md y docs/API.md (fase 1 seguridad, storage privado y endpoints)

--- a/portalti-backend/PortalTi.Api/appsettings.json
+++ b/portalti-backend/PortalTi.Api/appsettings.json
@@ -1,18 +1,31 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=PortalTi;Trusted_Connection=true;TrustServerCertificate=true;"
-  },
-  "Jwt": {
-    "Key": "Qw7j32nG8xZpV5uTa9RbLfYtOp1sKw3eFd6HcZlJvR0gqTnMz",
-    "Issuer": "PortalTiApi",
-    "Audience": "PortalTiClient",
-    "DurationMinutes": "60"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=PortalTI;Trusted_Connection=true;TrustServerCertificate=true;"
+  },
+  "JwtSettings": {
+    "SecretKey": "tu_clave_secreta_muy_larga_y_segura_aqui_2024",
+    "Issuer": "PortalTI",
+    "Audience": "PortalTIUsers",
+    "ExpirationMinutes": 480
+  },
+  "Storage": {
+    "Root": "Storage",
+    "MaxFileSizeMB": 10,
+    "AllowedExtensions": [".pdf", ".doc", ".docx", ".jpg", ".jpeg", ".png"],
+    "RetentionDays": 365,
+    "EnableHashVerification": true
+  },
+  "Security": {
+    "EnableHsts": true,
+    "EnableCsp": true,
+    "MaxLoginAttempts": 5,
+    "LockoutDurationMinutes": 15
+  }
 }
