feat: Agregar scripts de BD y solucionar problema de chat
- Agregar CREAR_BD_COMPLETA.sql: script completo para crear toda la BD
- Agregar CREAR_ADMIN.sql: script para crear usuario admin (admin/admin)
- Actualizar POBLAR_BD.sql: script mejorado de población de datos
- Solucionar error 404 en chat: agregar [Authorize] a ChatController
- Actualizar documentación: README.md y DOCUMENTACION_TECNICA.md
- Incluir guías de solución de problemas comunes
- Mejorar estructura de scripts de base de datos

--- a/portalti-backend/PortalTi.Api/appsettings.json
+++ b/portalti-backend/PortalTi.Api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=PortalTI;Trusted_Connection=true;TrustServerCertificate=true;"
+    "DefaultConnection": "Server=localhost;Database=PortalTi;Trusted_Connection=true;TrustServerCertificate=true;"
   },
   "JwtSettings": {
     "SecretKey": "tu_clave_secreta_muy_larga_y_segura_aqui_2024",
@@ -18,7 +18,14 @@
   "Storage": {
     "Root": "Storage",
     "MaxFileSizeMB": 10,
-    "AllowedExtensions": [".pdf", ".doc", ".docx", ".jpg", ".jpeg", ".png"],
+    "AllowedExtensions": [
+      ".pdf",
+      ".doc",
+      ".docx",
+      ".jpg",
+      ".jpeg",
+      ".png"
+    ],
     "RetentionDays": 365,
     "EnableHashVerification": true
   },
