feat: Implementar calendario estilo Outlook con integración completa de Microsoft Teams
-  Nuevo diseño de calendario tipo Outlook con sidebar y navegación moderna
-  Integración completa con Microsoft Graph API para Teams
-  Funcionalidades: drag & drop, edición inline, categorías de colores
-  Sistema de autenticación con Microsoft OAuth2
-  Creación automática de reuniones de Teams con enlaces reales
-  Vistas múltiples: mes, semana, día, agenda
-  Búsqueda y filtros avanzados por categorías
-  Gestión de participantes y invitaciones automáticas
-  Modo demostración para pruebas sin Azure AD
-  Documentación completa de configuración

Archivos nuevos:
- src/components/MicrosoftAuth.jsx - Componente de autenticación
- src/services/teamsService.js - Servicio de Microsoft Graph API
- src/pages/MicrosoftCallback.jsx - Callback de OAuth2
- src/config/microsoftConfig.js - Configuración de Microsoft
- docs/MICROSOFT_TEAMS_SETUP.md - Guía de configuración
- docs/CONFIGURACION_RAPIDA.md - Guía rápida

Archivos modificados:
- src/pages/Calendario.jsx - Rediseño completo del calendario
- src/App.js - Agregada ruta de callback
- package.json - Nuevas dependencias de Microsoft Graph

--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "@fullcalendar/core": "^6.1.15",
     "@fullcalendar/daygrid": "^6.1.15",
     "@fullcalendar/interaction": "^6.1.15",
+    "@fullcalendar/list": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
+    "@fullcalendar/resource": "^6.1.19",
+    "@fullcalendar/resource-timeline": "^6.1.19",
     "@fullcalendar/timegrid": "^6.1.15",
     "@headlessui/react": "^2.2.7",
+    "@microsoft/microsoft-graph-client": "^3.0.7",
+    "@microsoft/microsoft-graph-types": "^2.40.0",
     "@microsoft/signalr": "^9.0.6",
     "@tanstack/react-table": "^8.21.3",
     "@testing-library/dom": "^10.4.1",
