feat: Implementar reporte trimestral de registros con formato Excel profesional
- Agregar endpoint /api/reportes/registros-trimestrales/excel
- Implementar generación de Excel con ClosedXML
- Crear interfaz de usuario para configuración de trimestre y año
- Agregar vista previa de estructura del reporte
- Incluir 17 columnas organizadas en grupos lógicos
- Aplicar estilos profesionales con colores y filtros
- Corregir sistema de evidencias con autenticación JWT
- Mejorar gestión de permisos de archivos
- Actualizar configuración de almacenamiento

--- a/portalti-backend/PortalTi.Api/appsettings.json
+++ b/portalti-backend/PortalTi.Api/appsettings.json
@@ -16,7 +16,7 @@
     "ExpirationMinutes": 480
   },
   "Storage": {
-    "Root": "Storage",
+    "Root": "C:\\PortalTI\\Storage",
     "MaxFileSizeMB": 10,
     "AllowedExtensions": [
       ".pdf",
