feat: Mejoras en generación de actas y notificaciones móviles
- Separar funcionalidad de generar acta de previsualización
- Crear endpoint de previsualización temporal sin guardar en Storage
- Implementar resolución robusta de rutas de Storage para portabilidad
- Eliminar texto SHA256 de observaciones en firma digital
- Mejorar diseño responsivo de notificaciones para móviles
- Arreglar problema de corte del popover en pantallas pequeñas
- Estandarizar manejo de rutas en controladores y servicios
- Agregar logs de debug para troubleshooting

--- a/portalti-backend/PortalTi.Api/appsettings.json
+++ b/portalti-backend/PortalTi.Api/appsettings.json
@@ -16,7 +16,7 @@
     "ExpirationMinutes": 480
   },
   "Storage": {
-    "Root": "C:\\PortalTI\\Storage",
+    "Root": "Storage",
     "MaxFileSizeMB": 10,
     "AllowedExtensions": [
       ".pdf",
