chore: Limpiar archivos innecesarios y actualizar .gitignore
- Eliminar archivos de configuración obsoletos (ngrok.yml, package-lock.json)
- Eliminar migraciones obsoletas de calendario
- Eliminar scripts SQL obsoletos
- Eliminar archivos de configuración de Microsoft obsoletos
- Actualizar .gitignore para excluir archivos temporales
- Limpiar archivos de prueba y desarrollo innecesarios

--- a/.gitignore
+++ b/.gitignore
@@ -456,3 +456,8 @@ appsettings.Staging.json
 
 # Local development files
 *.local
+
+# Scripts con datos sensibles de la empresa
+**/Scripts/*VICSA*.sql
+**/Scripts/*vicsa*.sql
+**/Scripts/bd*vicsa*.csv
